# led-bottle-lighting

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
schematic/: led-bottle-lighting-cache.lib  led-bottle-lighting.kicad_pcb  led-bottle-lighting.net  led-bottle-lighting.pro  led-bottle-lighting.sch
src/: CMakeLists.txt  Makefile  README.md
src/main/: CMakeLists.txt  Kconfig.projbuild  bottle_led.c  bottle_led.h  bottle_led_single_color.c  bottle_led_single_color.h  bottle_led_spi.c  bottle_led_spi.h  component.mk  main.c  task_cron.c  task_cron.h  task_sntp.c  task_sntp.h  wifi_connect.c  wifi_connect.h
src/main/hal/esp32/: bottle_led.c  bottle_led_single_color.c  bottle_led_spi.c  wifi_connect.c
src/main/hal/esp8266/: bottle_led.c  bottle_led_single_color.c  wifi_connect.c
